# Glyph

./: .gitignore  CMakeLists.old.txt  CMakeLists.txt  README.md  addsubdirectory.txt  appcontext.cpp  appcontext.h  appsettings.cpp  createproject.cpp  createproject.ui  dockcharmap.cpp  dockcharmap.h  dockcharmap.ui  dockfonts.cpp  dockfonts.h  dockfonts.ui  dockglyph.cpp  dockglyph.h  dockglyph.ui  dockglyphs.cpp  dockglyphs.h  dockglyphs.ui  dockglyphselector.cpp  dockglyphselector.h  dockprofiles.cpp  dockprofiles.h  dockprofiles.ui  drawglyphrender.cpp  drawglyphrender.h  fontcharactermodel.cpp  fontcharactermodel.h  fontmanager.cpp  fontmanager.h  fontmetadataitem.h  fontmetadatamodel.h  freetyperender.cpp  freetyperender.h  glyph.h  glyphdock.cpp  glyphdock.h  (+30 more)
GlyphCore/: CMakeLists.txt  GlyphCore_global.h  appcontext.cpp  appcontext.h  appdata.cpp  appdata.h  appproject.cpp  appproject.h  appsettings.cpp  appsettings.h  bitmapdimension.cpp  bitmapdimension.h  bitmapdimensions.cpp  bitmapdimensions.h  charmapkey.h  charmapmanager.cpp  charmapmanager.h  charmapquery.cpp  charmapquery.h  condition.h  dbcore.cpp  dbcore.h  dbmanager.cpp  dbmanager.h  dimensionmanager.cpp  dimensionmanager.h  drawglyphrenderer.cpp  drawglyphrenderer.h  fontloader.cpp  fontloader.h  fontmanager.cpp  fontmanager.h  fontmanager_old.cpp  fontmanager_old.h  fontutils.cpp  fontutils.h  freetypeexception.h  freetypeglyphrenderer.cpp  freetypeglyphrenderer.h  ftglyph.h  (+44 more)
GlyphDraw/: CMakeLists.txt  GlyphDraw_global.h  drawcontext.cpp  drawcontext.h  glyphdraw.cpp  glyphdraw.h  glyphdrawcontext.cpp  glyphdrawcontext.h
GlyphMeta/: CMakeLists.txt  GlyphMeta_global.h  bitmapdimension.h  drawcontext.h  fontcontext.h  ftglyph.h  glyphcontext.h  glyphimage.h  glyphkey.h  glyphmarkup.h  glyphmeta.cpp  glyphmeta.h  glyphmeta_old.h  glyphoffset.h  glyphprofile.h  gridcontext.h  gridpaddings.h  imagecontext.h  imagekey.h  profilecontext.cpp  profilecontext.h  profilekey.h
GlyphModels/: CMakeLists.txt  GlyphModels_global.h  charmapmodel.cpp  charmapmodel.h  charmaptablemodel.cpp  charmaptablemodel.h  fontmodel.cpp  fontmodel.h  glyphmodel.cpp  glyphmodel.h  glyphmodels.cpp  glyphmodels.h  profilesmodel.cpp  profilesmodel.h  unicodemetadataselectionmodel.cpp  unicodemetadataselectionmodel.h  wherequery.cpp
GlyphUiModels/: CMakeLists.txt  bitmapdimensionmodel.cpp  bitmapdimensionmodel.h  fontcategorymodel.cpp  fontcategorymodel.h  fontcharactermodel.cpp  fontcharactermodel.h  fontdecompositionmodel.cpp  fontdecompositionmodel.h  fontscriptmodel.cpp  fontscriptmodel.h  glyphmodel.cpp  glyphmodel.h
build01/: compile_commands.json
build01/Desktop_Qt_6_9_1_MinGW_64_bit-Debug/: CMakeCache.txt.prev
build01/Desktop_Qt_6_9_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build01/Desktop_Qt_6_9_1_MinGW_64_bit-Debug/Glyph_autogen/: deps
build01/Desktop_Qt_6_9_1_MinGW_64_bit-Debug/Glyph_autogen/EWIEGA46WW/: moc_dockglyph.cpp  moc_dockglyph.cpp.d  moc_glyphmanager.cpp  moc_glyphmanager.cpp.d  moc_glyphpreview.cpp  moc_glyphpreview.cpp.d  moc_glyphwidget.cpp  moc_glyphwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build01/Glyph_autogen/: deps  mocs_compilation.cpp
build01/Glyph_autogen/EWIEGA46WW/: moc_dockglyph.cpp  moc_dockglyph.cpp.d  moc_glyphmanager.cpp  moc_glyphmanager.cpp.d  moc_glyphpreview.cpp  moc_glyphpreview.cpp.d  moc_glyphwidget.cpp  moc_glyphwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_icons.cpp
core/: CMakeLists.txt  appcontext.cpp  appcontext.h  appsettings.h  drawglyphrenderer.cpp  drawglyphrenderer.h  fontmanager.cpp  fontmanager.h  freetypeexception.cpp  freetypeglyphrenderer.cpp  freetypeglyphrenderer.h  glyphentry.h  glyphmanager.cpp  glyphmanager.h  glyphmeta.h  iglyphrenderer.h  unicodemetadata.cpp
doc/: structure.md
glyphui/: CMakeLists.txt  dockglyphedit.cpp  dockglyphedit.h  dockglyphedit.ui  dockglyphprofiles.cpp  dockglyphprofiles.h  dockglyphprofiles.ui  dockglyphselector.cpp  dockglyphselector.h  dockglyphselector.ui  dockglyphtable.cpp  dockglyphtable.h  dockglyphtable.ui  glyph.qrc  glyphpreview.cpp  glyphpreview.h  glyphui_global.h  glyphwidget.cpp  glyphwidget.h  glyphwidget.ui  mainstatusbar.cpp  mainstatusbar.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
images/: glyph.ai
main/: CmakeLists.txt  main.cpp
models/: CMakeLists.txt  fontcategorymodel.cpp  fontcategorymodel.h  fontcharactermodel.cpp  fontcharactermodel.h  fontdecompositionmodel.cpp  fontdecompositionmodel.h  fontmetadataitem.h  fontmetadatamodel.cpp  fontscriptmodel.cpp  fontscriptmodel.h  glyphmodel.cpp
resources/: CMakeLists.txt  arrows.ai  glyph.ai  glyph01.ai  icons.qrc
sql/: select_charmap.sql
ui/: CMakeLists.txt  dockglyph.cpp  dockglyph.h  dockglyph.ui  dockglyphselector.cpp  dockglyphselector.h  dockglyphselector.ui  glyphpreview.cpp  glyphpreview.h  glyphwidget.cpp  glyphwidget.h  mainstatusbar.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
